--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cloudflare-apple-sign-in",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "A forked Apple sign-in REST API implementation adapted for Cloudflare Workers.",
   "main": "build/AppleSignIn.js",
   "type": "module",
@@ -8,7 +8,7 @@
     "build"
   ],
   "scripts": {
-    "build": "rm -rf ./lib && tsc --declarationDir lib --outDir lib"
+    "build": "rm -rf ./dist && tsc"
   },
   "keywords": [
     "signin",
@@ -50,25 +50,6 @@
   "license": "MIT",
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20240222.0",
-    "@types/jest": "26.0.19",
-    "@types/jsonwebtoken": "8.5.0",
-    "@types/node": "14.14.20",
-    "@typescript-eslint/eslint-plugin": "4.12.0",
-    "@typescript-eslint/parser": "4.12.0",
-    "eslint": "7.17.0",
-    "eslint-config-prettier": "7.1.0",
-    "eslint-config-standard": "16.0.2",
-    "eslint-plugin-import": "2.22.1",
-    "eslint-plugin-node": "11.1.0",
-    "eslint-plugin-prettier": "3.3.1",
-    "eslint-plugin-promise": "4.2.1",
-    "eslint-plugin-standard": "5.0.0",
-    "husky": "4.3.6",
-    "jest": "26.6.3",
-    "prettier": "2.2.1",
-    "ts-jest": "26.4.4",
-    "ts-node": "9.1.1",
-    "typedoc": "0.20.13",
     "typescript": "5.4.2"
   },
   "dependencies": {
