--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cloudflare-apple-sign-in",
-  "version": "1.0.2",
+  "version": "1.0.7",
   "description": "A forked Apple sign-in REST API implementation adapted for Cloudflare Workers.",
   "main": "build/AppleSignIn.js",
   "type": "module",
@@ -42,10 +42,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://git@github.com:renarsvilnis/apple-sign-in-rest.git"
+    "url": "git://git@github.com:nora-soderlund/cloudflare-apple-sign-in.git"
   },
   "bugs": {
-    "url": "https://github.com/renarsvilnis/apple-sign-in-rest/issues"
+    "url": "https://github.com/nora-soderlund/cloudflare-apple-sign-in/issues"
   },
   "license": "MIT",
   "devDependencies": {
@@ -53,7 +53,6 @@
     "typescript": "5.4.2"
   },
   "dependencies": {
-    "@tsndr/cloudflare-worker-jwt": "^2.5.2",
-    "@nora-soderlund/jwks-rsa": "^3.1.0"
+    "@tsndr/cloudflare-worker-jwt": "^2.5.2"
   }
 }
